Fix open source corner and linear example on tablet screens

--- a/layout/style.css.sass
+++ b/layout/style.css.sass
@@ -91,6 +91,7 @@ $easing-width: 120px + 4px
     position: absolute
     top: 11px
     right: 25px
+    z-index: 2
     .easing-title
       margin-bottom: -35px
   &.easeOutElastic .easing-title
@@ -385,6 +386,7 @@ $easing-width: 120px + 4px
     padding: 0 3px
     background: white
     box-shadow: 0 0 6px white
+    z-index: 3
     +transition(opacity 400ms)
     a
       color: #666
